--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <body>
+    <img src="img/bower.png" alt="Hello Bower">
+    <img src="img/composer.png" alt="Hello Composer">
+    <img src="img/grunt.png" alt="Hello Grunt">
+    <img src="img/hadoop.png" alt="Hello Hadoop">
+  </body>
 </html>
