--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <img src="img/bower.png" alt="Hello Bower">
-    <img src="img/composer.png" alt="Hello Composer">
-    <img src="img/grunt.png" alt="Hello Grunt">
-    <img src="img/hadoop.png" alt="Hello Hadoop">
+    <img src="img/bower.png" title="Hello Bower">
+    <img src="img/composer.png" title="Hello Composer">
+    <img src="img/grunt.png" title="Hello Grunt">
+    <img src="img/hadoop.png" title="Hello Hadoop">
   </body>
 </html>
