--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="col-md-1">.col-md-1</div>
         <div class="col-md-1">.col-md-1</div>
         <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
       </div>
       <div class="row">
         <div class="col-md-8">.col-md-8</div>
