--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
-        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
+        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
 
         <!-- Add the extra clearfix for only the required viewport -->
         <div class="clearfix visible-xs-block"></div>
 
-        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
-        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
+        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
       </div>
     </div>
 
