--- a/index.html
+++ b/index.html
@@ -1,39 +1,10 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>响应式列重置</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>
+      Have Fun!
+    </title>
   </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
-        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
-
-        <!-- Add the extra clearfix for only the required viewport -->
-        <div class="clearfix visible-xs-block"></div>
-
-        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
-        <div class="col-xs-6 col-md-3">.col-xs-6 .col-md-3</div>
-      </div>
-    </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+  <body style="margin:0;padding:0;overflow:hidden;">
+    <iframe src="http://www.zamolski.com/agot/" width="100%" height="100%"></iframe>
   </body>
 </html>
