--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </title>
   </head>
   <body style="margin:0;padding:0;overflow:hidden;">
-    <iframe src="http://www.zamolski.com/agot/" width="100%" height="100%"></iframe>
+    <iframe src="http://end3r.com/games/frontinvaders/" width="100%" height="100%"></iframe>
   </body>
 </html>
