--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>jqJigsawPuzzle - Example 3</title>
+        <title>荷包蛋少女</title>
             <meta http-equiv="Content-Language" content="en-GB"/>
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
             <meta name="keywords" content=""/>
